--- a/src/components/home/about.astro
+++ b/src/components/home/about.astro
@@ -1,48 +1,50 @@
 ---
-import Button from '@components/button.astro'
-import Label from '@components/label.astro'
-import type { LocalesType } from '@helpers/locale'
+import Button from "@components/button.astro";
+import Label from "@components/label.astro";
+import type { LocalesType } from "@helpers/locale";
 
 type Props = {
-  locale: LocalesType
-}
+  locale: LocalesType;
+};
 
-const { locale } = Astro.props
+const { locale } = Astro.props;
 const currentLanguage = new URL(Astro.request.url).pathname
   .slice(1)
-  .split('/')[0]
+  .split("/")[0];
 ---
 
-<section class='mb-28 sm:p-0 p-8'>
-  <div class='flex justify-between lg:items-start lg:flex-row flex-col items-center'>
-    <div class='w-full lg:m-0 sm:mb-8'>
+<section class="mb-28 p-8 sm:p-0">
+  <div
+    class="flex flex-col items-center justify-between lg:flex-row lg:items-start"
+  >
+    <div class="w-full sm:mb-8 lg:m-0">
       <Label>
         {locale.home.about.heading}
       </Label>
-      <div class='text-gray lg:max-w-[515px] mb-7 lg:text-left text-center'>
+      <div class="mb-7 text-center text-gray lg:max-w-[515px] lg:text-left">
         {locale.home.about.description.part_1}<br /><br />
         {locale.home.about.description.part_2}<br /><br />
         {locale.home.about.description.part_3}
       </div>
-      <div class="lg:m-0 mx-auto w-fit">
+      <div class="mx-auto w-fit lg:m-0">
         <Button href={`/${currentLanguage}/about-me`}>
           {locale.home.about.button} -&gt;
         </Button>
       </div>
     </div>
-    <div class='relative min-w-[339px]'>
-      <img src='/assets/people2.png' alt='people' />
+    <div class="relative min-w-[339px]">
+      <img src="/assets/people2.png" alt="people" />
       <img
-        src='/assets/dots.svg'
-        alt='dots'
-        class='absolute top-[10%] sm:-left-1 left-8 '
+        src="/assets/dots.svg"
+        alt="dots"
+        class="absolute top-[10%] left-8 sm:-left-1"
       />
       <img
-        src='/assets/dots2.svg'
-        alt='dots'
-        class='absolute top-2/3 right-4'
+        src="/assets/dots2.svg"
+        alt="dots"
+        class="absolute top-2/3 right-4"
       />
-      <div class='h-px w-[271px] absolute bottom-0 right-6 bg-primary'></div>
+      <div class="absolute bottom-0 right-6 h-px w-[271px] bg-primary"></div>
     </div>
   </div>
 </section>
