--- a/src/components/bookmarks.astro
+++ b/src/components/bookmarks.astro
@@ -1,9 +1,9 @@
-<div class='fixed left-4 top-0 flex flex-col items-center w-fit z-30'>
-  <div class='w-[1.5px] bg-gray h-48'></div>
-  <a href='https://github.com/andrey779evseev' target='_blank' class='my-3'>
-    <img src='/assets/github.svg' alt='github-icon' />
+<div class="fixed left-4 top-0 z-30 flex w-fit flex-col items-center">
+  <div class="h-48 w-[1.5px] bg-gray"></div>
+  <a href="https://github.com/andrey779evseev" target="_blank" class="my-3">
+    <img src="/assets/github.svg" alt="github-icon" />
   </a>
-  <a href='https://www.linkedin.com/in/andrew-evseev-4a890b216' target='_blank'>
-    <img src='/assets/linkedIn.svg' alt='linkedIn-icon' />
+  <a href="https://www.linkedin.com/in/andrew-evseev-4a890b216" target="_blank">
+    <img src="/assets/linkedIn.svg" alt="linkedIn-icon" />
   </a>
 </div>
