--- a/src/pages/[lang]/contacts.astro
+++ b/src/pages/[lang]/contacts.astro
@@ -1,49 +1,56 @@
 ---
-import Label from '@components/label.astro'
-import { LocalesList, createLocale } from '@helpers/locale'
-import Layout from '@layouts/layout.astro'
+import Label from "@components/label.astro";
+import { LocalesList, createLocale } from "@helpers/locale";
+import Layout from "@layouts/layout.astro";
 
 export const getStaticPaths = () => {
   return LocalesList.map((locale) => ({
     params: { lang: locale },
-  }))
-}
+  }));
+};
 
-const { lang } = Astro.params
+const { lang } = Astro.params;
 
-const locale = createLocale(lang)
+const locale = createLocale(lang);
 ---
 
-<Layout locale={locale} title='contacts'>
-  <div class='mt-12 sm:p-0 px-8'>
-    <div class='text-[32px] font-semibold flex mb-16'>
-      <div class='text-primary'>/</div>
-      <div class='text-white'>{locale.contacts.heading}</div>
+<Layout locale={locale} title="contacts">
+  <div class="mt-12 px-8 sm:p-0">
+    <div class="mb-16 flex text-[32px] font-semibold">
+      <div class="text-primary">/</div>
+      <div class="text-white">{locale.contacts.heading}</div>
     </div>
-    <div class='flex justify-between lg:items-start items-center mb-20 lg:flex-row flex-col'>
-      <div class='text-gray sm:w-[505px] lg:text-left text-center lg:mb-0 mb-4'>
+    <div
+      class="mb-20 flex flex-col items-center justify-between lg:flex-row lg:items-start"
+    >
+      <div class="mb-4 text-center text-gray sm:w-[505px] lg:mb-0 lg:text-left">
         {locale.home.contacts.description}
       </div>
-      <div class='border border-gray sm:p-4 p-2'>
-        <div class='text-white font-semibold mb-4'>
+      <div class="border border-gray p-2 sm:p-4">
+        <div class="mb-4 font-semibold text-white">
           {locale.home.contacts.message}
         </div>
-        <div class='flex items-center mb-4'>
-          <img src='/assets/email.svg' alt='email' />
-          <a href='mailto:anddrey779esveev@gmail.com' class='text-gray sm:ml-4 ml-1 sm:text-base text-sm'>
+        <div class="mb-4 flex items-center">
+          <img src="/assets/email.svg" alt="email" />
+          <a
+            href="mailto:anddrey779esveev@gmail.com"
+            class="ml-1 text-sm text-gray sm:ml-4 sm:text-base"
+          >
             andrey779evseev@gmail.com
           </a>
         </div>
-        <div class='flex items-center'>
-          <img src='/assets/telegram.svg' alt='email' />
-          <div class='text-gray sm:ml-4 ml-1 sm:text-base text-sm'>@malifor</div>
+        <div class="flex items-center">
+          <img src="/assets/telegram.svg" alt="email" />
+          <div class="ml-1 text-sm text-gray sm:ml-4 sm:text-base">
+            @malifor
+          </div>
         </div>
       </div>
     </div>
     <Label>{locale.contacts.other}</Label>
-    <div class='flex items-center mb-28'>
-      <img src='/assets/twitter.svg' alt='twitter' />
-      <span class='text-gray ml-3'>@andrew_evseev04</span>
+    <div class="mb-28 flex items-center">
+      <img src="/assets/twitter.svg" alt="twitter" />
+      <span class="ml-3 text-gray">@andrew_evseev04</span>
     </div>
   </div>
 </Layout>
