--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -1,31 +1,31 @@
 ---
-import { LocalesList, createLocale } from '@helpers/locale'
-import Layout from '@layouts/layout.astro'
-import projects from '@data/projects.json'
-import ProjectCard from '@components/project-card.astro'
-import Label from '@components/label.astro'
+import { LocalesList, createLocale } from "@helpers/locale";
+import Layout from "@layouts/layout.astro";
+import projects from "@data/projects.json";
+import ProjectCard from "@components/project-card.astro";
+import Label from "@components/label.astro";
 
 export const getStaticPaths = () => {
   return LocalesList.map((locale) => ({
     params: { lang: locale },
-  }))
-}
+  }));
+};
 
-const { lang } = Astro.params
+const { lang } = Astro.params;
 
-const locale = createLocale(lang)
+const locale = createLocale(lang);
 ---
 
-<Layout title='projects' locale={locale}>
-  <div class='mt-12 sm:p-0 px-8'>
-    <div class='mb-16'>
-      <div class='text-[32px] font-semibold flex mb-4'>
-        <div class='text-primary'>/</div>
-        <div class='text-white'>{locale.projects.heading}</div>
+<Layout title="projects" locale={locale}>
+  <div class="mt-12 px-8 sm:p-0">
+    <div class="mb-16">
+      <div class="mb-4 flex text-[32px] font-semibold">
+        <div class="text-primary">/</div>
+        <div class="text-white">{locale.projects.heading}</div>
       </div>
       <div>{locale.projects.description}</div>
     </div>
-    <div class='sm:grid sm:grid-cols-3 flex flex-col gap-4 mb-28'>
+    <div class="mb-28 flex flex-col gap-4 sm:grid sm:grid-cols-3">
       {
         projects.decent.map((project) => (
           <ProjectCard locale={locale} project={project} />
