--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,34 +1,66 @@
 ---
-import Footer from "@components/footer.astro";
-import Header from "@components/header.astro";
-import "@fontsource/fira-code/400.css";
-import "@fontsource/fira-code/500.css";
-import "@fontsource/fira-code/600.css";
-import "@fontsource/fira-code/700.css";
-import type { LocalesType } from "@helpers/locale";
+import Footer from '@components/footer.astro'
+import Header from '@components/header.astro'
+import '@fontsource/fira-code/400.css'
+import '@fontsource/fira-code/500.css'
+import '@fontsource/fira-code/600.css'
+import '@fontsource/fira-code/700.css'
+import type { LocalesType } from '@helpers/locale'
 
 export type Props = {
-  title: string;
-  locale: LocalesType;
-};
+  title: string
+  locale: LocalesType
+}
 
-const { title, locale } = Astro.props;
+const { title, locale } = Astro.props
 ---
 
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="generator" content={Astro.generator} />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='icon' type='image/x-icon' href='/favicon.ico' />
+    <meta name='generator' content={Astro.generator} />
+
+    <meta
+      name='description'
+      content="Explore the creative world of Malifor through their online portfolio. Discover a showcase of stunning designs, artworks, and projects that define their unique vision and talent. Dive into a visual journey with Malifor's portfolio."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property='og:type' content='website' />
+    <meta property='og:url' content='https://malifor.vercel.app/en/home' />
+    <meta property='og:title' content='Malifor Protfolio' />
+    <meta
+      property='og:description'
+      content="Explore the creative world of Malifor through their online portfolio. Discover a showcase of stunning designs, artworks, and projects that define their unique vision and talent. Dive into a visual journey with Malifor's portfolio."
+    />
+    <meta
+      property='og:image'
+      content='/og.png'
+    />
+
+    <!-- Twitter -->
+    <meta property='twitter:card' content='summary_large_image' />
+    <meta property='twitter:url' content='https://malifor.vercel.app/en/home' />
+    <meta property='twitter:title' content='Malifor Protfolio' />
+    <meta
+      property='twitter:description'
+      content="Explore the creative world of Malifor through their online portfolio. Discover a showcase of stunning designs, artworks, and projects that define their unique vision and talent. Dive into a visual journey with Malifor's portfolio."
+    />
+    <meta
+      property='twitter:image'
+      content='/og.png'
+    />
+
     <title>{title}</title>
   </head>
   <body data-title={title}>
     <Header locale={locale} />
     <main>
       <div
-        class="mx-auto w-full p-8 sm:max-w-xl sm:p-0 sm:pt-16 ss:max-w-2xl md:max-w-3xl lg:max-w-4xl xl:max-w-5xl"
+        class='mx-auto w-full p-8 sm:max-w-xl sm:p-0 sm:pt-16 ss:max-w-2xl md:max-w-3xl lg:max-w-4xl xl:max-w-5xl'
       >
         <slot />
       </div>
@@ -44,11 +76,11 @@ const { title, locale } = Astro.props;
     @apply m-0 box-border p-0;
   }
   html {
-    font-family: "Fira Code", monospace;
+    font-family: 'Fira Code', monospace;
     @apply bg-background text-white;
   }
   main {
-    background-image: url("/assets/background.svg");
+    background-image: url('/assets/background.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right 500px;
@@ -56,18 +88,18 @@ const { title, locale } = Astro.props;
 </style>
 
 <script>
-  const steps = "/-\\|";
-  const FPS = 2;
-  const frameInterval = 1000 / FPS;
-  let step = 0;
-  let lastTimestep = 0;
+  const steps = '/-\\|'
+  const FPS = 2
+  const frameInterval = 1000 / FPS
+  let step = 0
+  let lastTimestep = 0
   const animation = (timestamp: number) => {
     if (lastTimestep + frameInterval < timestamp) {
-      document.title = `${steps[step++]} ${document.body.dataset.title}`;
-      step %= steps.length;
-      lastTimestep = timestamp;
+      document.title = `Malifor ${steps[step++]} ${document.body.dataset.title}`
+      step %= steps.length
+      lastTimestep = timestamp
     }
-    window.requestAnimationFrame(animation);
-  };
-  window.requestAnimationFrame(animation);
+    window.requestAnimationFrame(animation)
+  }
+  window.requestAnimationFrame(animation)
 </script>
